# power-system-data-model

./: .gitignore  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: check-code.yml  checks.yml  create-class-diagram.yml  create-release.yml  dependabot-auto-approve.yml  erdantic-pydantic-plugin.py  release.yml  test-code.yml  tests.yml
psdm/: base.py  meta.py  quantities.py
psdm/quantities/: multi_phase.py  single_phase.py
psdm/steadystate_case/: active_power.py  case.py  characteristic.py  controller.py  external_grid.py  load.py  reactive_power.py  transformer.py
psdm/topology/: active_power.py  branch.py  characteristic.py  coupler.py  external_grid.py  fuse.py  load.py  load_model.py  node.py  quantities.py  reactive_power.py  switch.py  topology.py  transformer.py  windings.py
psdm/topology_case/: case.py  element_state.py
schema/1.0.0/: steady_state_case.json  topology.json
schema/1.1.0/: topology.json
schema/1.2.0/: topology.json
schema/1.3.0/: steady_state_case.json  topology.json  topology_case.json
schema/1.3.1/: steady_state_case.json  topology.json  topology_case.json
schema/1.4.0/: steady_state_case.json  topology.json  topology_case.json
schema/1.5.0/: steady_state_case.json  topology.json
schema/1.5.1/: steady_state_case.json  topology.json  topology_case.json
schema/1.6.0/: topology.json  topology_case.json
schema/1.7.0/: steady_state_case.json  topology.json
schema/1.8.0/: steady_state_case.json  topology.json  topology_case.json
schema/1.8.1/: steady_state_case.json  topology.json
schema/1.9.0/: steady_state_case.json  topology.json  topology_case.json
schema/2.0.0/: steady_state_case.json
schema/2.0.1/: topology.json
schema/2.1.0/: steady_state_case.json  topology.json
schema/2.1.1/: steady_state_case.json  topology.json
schema/2.1.2/: steady_state_case.json  topology.json  topology_case.json
schema/2.2.0/: steady_state_case.json  topology.json  topology_case.json
schema/2.3.0/: topology.json
schema/2.3.1/: steady_state_case.json  topology.json
schema/2.3.2/: topology_case.json
schema/2.3.3/: steady_state_case.json  topology.json
src/psdm/: base.py  meta.py
src/psdm/quantities/: multi_phase.py  single_phase.py
src/psdm/steadystate_case/: case.py  characteristic.py  controller.py  external_grid.py  load.py  reactive_power.py
src/psdm/topology/: branch.py  external_grid.py  load.py  load_model.py  node.py  topology.py  transformer.py
src/psdm/topology_case/: element_state.py
tests/: test_active_power.py  test_branch.py  test_controller.py  test_full_schema.py  test_meta.py  test_multi_phase_quantities.py  test_multi_power_factors.py  test_optional_attribute_data.py  test_p_controller.py  test_q_controller.py  test_reactive_power.py  test_single_phase_quantities.py  test_topology_load.py  test_topology_quantities.py
